# asset_viewer

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: build.yml  ci.yml  deploy.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: dto.py  providers.py
backend/app/api/controllers/: assets.py  system.py
backend/app/api/routes/: assets.py  uploads.py
backend/app/core/: config.py
backend/app/db/: init_from_json.py  models.py  repositories.py  session.py
backend/app/db/migrations/: README  env.py
backend/app/db/migrations/versions/: 20260529_0001_initial_schema.py
backend/app/services/: assets.py  exceptions.py  provenance.py  resources.py
backend/app/storage/: minio_client.py  ports.py
backend/tests/: test_assets_api.py  test_init_from_json.py  test_minio_client.py  test_provenance.py  test_resources_service.py  test_uploads.py
docs/: DEPLOYMENT.md  database.md  frontend.md  routes.md
frontend/: .prettierignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/e2e/: asset-evidence.spec.ts
frontend/playwright-report/: index.html
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  styles.css  types.ts
frontend/src/components/: FieldValue.test.tsx  FieldValue.tsx  UploadPanel.tsx
frontend/src/components/evidence/: PdfEvidencePanel.test.tsx  PdfEvidencePanel.tsx  SourceViewerPanel.test.tsx  SourceViewerPanel.tsx  index.ts
frontend/src/components/evidence/sourceViewer/: SourceCard.tsx  primitives.tsx  registry.test.tsx  registry.ts  sourceIdentity.ts  types.ts
frontend/src/components/evidence/sourceViewer/renderers/: CompositeSourceView.tsx  CsvSourceView.tsx  ExcelSourceView.tsx  PdfSourceView.tsx  SourceRenderers.test.tsx  UnsupportedSourceView.tsx  compositeSourceRenderer.tsx  csvSourceRenderer.tsx  excelSourceRenderer.tsx  pdfSourceRenderer.tsx
frontend/src/lib/: csv.test.ts  csv.ts  documentCache.test.ts  documentCache.ts  pdf.test.ts  pdf.ts  xlsx.test.ts  xlsx.ts
frontend/src/pages/: AssetDetailPage.test.tsx  AssetDetailPage.tsx  AssetsPage.tsx
ressources/: source_viewer_demo.csv  source_viewer_demo.xlsx  source_viewer_test_data.json  warrington_test_data.json
