[project]
name = "gocanopy-backend"
version = "0.1.0"
description = "Litestar backend for the GoCanopy asset management POC"
requires-python = ">=3.12"
dependencies = [
    "advanced-alchemy>=1.8,<1.9",
    "asyncpg>=0.30.0",
    "httpx>=0.28.0",
    "litestar[opentelemetry,sqlalchemy,standard]>=2.22,<3",
    "minio>=7.2.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "pyright>=1.1.409",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 180
target-version = "py312"

[tool.black]
line-length = 180
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app", "tests"]

[[tool.mypy.overrides]]
module = ["minio.*"]
ignore_missing_imports = true

[tool.pyright]
include = ["app", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
